--- a/page.html
+++ b/page.html
@@ -37,7 +37,7 @@
               <img src="/assetsImg/account.png" alt="">
             </div>
             <div class="rightHeaderItem " >
-              <span>ACCOUNT</span>
+              <span>NE ACCOUNT</span>
             </div>
           </div>
         </div>
@@ -54,8 +54,8 @@
       <div class="caption">
         <div class="logoFirstPageLines">
           <img src="/assetsImg/bezfona.png" alt="" class="scale" />
-          <p class="logoFirstPageText scale">BEATSTORE</p>
-          <p class="logoFirstPageSlogan scale">Your sound ♪</p>
+          <p class="logoFirstPageText scale">NEXTPAGE</p>
+          <p class="logoFirstPageSlogan scale">ROUTER</p>
         </div>
       </div>
     </div>
